[gd_scene load_steps=6 format=3 uid="uid://wfk7ky7kk2l8"]

[ext_resource type="Script" uid="uid://dfl1botbbilhg" path="res://Scripts/main_menu.gd" id="1_87ipw"]
[ext_resource type="FontFile" uid="uid://bqdpte3m2v88p" path="res://Assets/Higher Jump.ttf" id="2_hii65"]
[ext_resource type="AudioStream" uid="uid://dv88ncqj041qp" path="res://Sounds/sfx/ButtonClick.wav" id="3_hii65"]

[sub_resource type="LabelSettings" id="LabelSettings_kqsxi"]
font = ExtResource("2_hii65")
font_size = 58

[sub_resource type="LabelSettings" id="LabelSettings_87ipw"]
font = ExtResource("2_hii65")
font_size = 10

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_87ipw")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="Title" type="Label" parent="."]
offset_left = 430.0
offset_top = 200.0
offset_right = 865.0
offset_bottom = 355.0
text = "100 BUGS"
label_settings = SubResource("LabelSettings_kqsxi")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 493.0
offset_top = 411.0
offset_right = 793.0
offset_bottom = 491.0
theme_override_fonts/font = ExtResource("2_hii65")
theme_override_font_sizes/font_size = 20
text = "START CAMPAIGN"

[node name="ClickSound" type="AudioStreamPlayer" parent="StartButton"]
stream = ExtResource("3_hii65")
volume_db = -5.0

[node name="DailyButton" type="Button" parent="."]
offset_left = 524.0
offset_top = 520.0
offset_right = 761.0
offset_bottom = 572.0
theme_override_fonts/font = ExtResource("2_hii65")
text = "Daily Challenge"

[node name="ClickSound" type="AudioStreamPlayer" parent="DailyButton"]
stream = ExtResource("3_hii65")
volume_db = -5.0

[node name="Label" type="Label" parent="."]
offset_left = 499.0
offset_top = 671.0
offset_right = 801.0
offset_bottom = 704.0
theme_override_fonts/font = ExtResource("2_hii65")
theme_override_font_sizes/font_size = 8
text = "v1.0 - Solana Hackathon 2025"
horizontal_alignment = 1

[node name="WalletPanel" type="Panel" parent="."]
offset_left = 950.0
offset_top = 20.0
offset_right = 1250.0
offset_bottom = 100.0

[node name="WalletStatus" type="Label" parent="WalletPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 211.0
offset_bottom = 38.0
text = "No Wallet Connected"
label_settings = SubResource("LabelSettings_87ipw")
horizontal_alignment = 1

[node name="WalletButton" type="Button" parent="WalletPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 229.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("2_hii65")
theme_override_font_sizes/font_size = 14
text = "CONNECT WALLET"

[node name="ClickSound" type="AudioStreamPlayer" parent="WalletPanel/WalletButton"]
stream = ExtResource("3_hii65")
volume_db = -5.0
